--- a/glide.yaml
+++ b/glide.yaml
@@ -3,4 +3,5 @@ import:
 - package: k8s.io/helm
   subpackages:
   - pkg/proto
+- package: k8s.io/client-go
 - package: github.com/grpc-ecosystem/grpc-gateway
